[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/ClearSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Themes/generic_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Game/DrawingCanvas.gd" type="Script" id=3]
[ext_resource path="res://Fonts/prompt_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Styles/Panel/canvas_panel.tres" type="StyleBox" id=5]
[ext_resource path="res://Scripts/Game/Game.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.001
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.999999 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.403922, 1, 0.403922, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.196078, 0.196078, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 14
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 1 )

[node name="GameRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawingCanvas" type="Panel" parent="."]
margin_left = 600.0
margin_top = 60.0
margin_right = 940.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 170, 240 )
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerButtons" type="VBoxContainer" parent="DrawingCanvas"]
margin_left = -148.0
margin_top = 3.0
margin_right = -30.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( -84.3149, 137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClear" type="Button" parent="DrawingCanvas/ContainerButtons"]
margin_right = 118.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
rect_pivot_offset = Vector2( 78.785, 36 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.490196 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSubmit" type="Button" parent="DrawingCanvas/ContainerButtons"]
margin_top = 28.0
margin_right = 118.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 24 )
rect_pivot_offset = Vector2( 78.785, 36 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.490196 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerHostButtons" type="VBoxContainer" parent="DrawingCanvas"]
margin_left = -148.0
margin_top = 370.0
margin_right = -30.0
margin_bottom = 479.0
rect_pivot_offset = Vector2( -84.3149, 137 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckboxOneLine" type="CheckBox" parent="DrawingCanvas/ContainerHostButtons"]
margin_top = 31.0
margin_right = 118.0
margin_bottom = 54.0
text = "One Line"
align = 1

[node name="CheckboxNoClear" type="CheckBox" parent="DrawingCanvas/ContainerHostButtons"]
margin_top = 58.0
margin_right = 118.0
margin_bottom = 81.0
text = "No Clear"
align = 1

[node name="ButtonNewGame" type="Button" parent="DrawingCanvas/ContainerHostButtons"]
margin_top = 85.0
margin_right = 118.0
margin_bottom = 109.0
rect_min_size = Vector2( 0, 24 )
rect_pivot_offset = Vector2( 78.785, 36 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.490196 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawingCanvasAnimation" type="AnimationPlayer" parent="DrawingCanvas"]
autoplay = "SETUP"
anims/SETUP = SubResource( 3 )
anims/in = SubResource( 4 )
anims/pulse_green = SubResource( 5 )
anims/pulse_red = SubResource( 6 )

[node name="PlayersListScrollContainer" type="ScrollContainer" parent="."]
margin_left = 54.0
margin_top = 127.0
margin_right = 359.0
margin_bottom = 299.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="PlayersListScrollContainer"]
margin_right = 305.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 7 )

[node name="PlayersListBG" type="Panel" parent="PlayersListScrollContainer/PanelContainer"]
margin_right = 305.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayersList" type="VBoxContainer" parent="PlayersListScrollContainer/PanelContainer"]
modulate = Color( 0.921569, 0.921569, 0.921569, 1 )
margin_right = 305.0
margin_bottom = 172.0
theme = ExtResource( 2 )
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextRoundInfo" type="RichTextLabel" parent="."]
margin_left = 610.0
margin_top = 545.0
margin_right = 929.0
margin_bottom = 591.0
custom_fonts/normal_font = SubResource( 8 )
text = "Round -
Loading"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPrompt" type="RichTextLabel" parent="."]
margin_left = 54.0
margin_top = 66.0
margin_right = 415.0
margin_bottom = 115.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Waiting for server to respond...
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLeave" type="Button" parent="."]
margin_left = 51.0
margin_top = 515.0
margin_right = 110.0
margin_bottom = 539.0
rect_min_size = Vector2( 0, 24 )
rect_pivot_offset = Vector2( 78.785, 36 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.490196 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}
